syntax = "proto3";

package api;

option go_package = "./;pb";

message Event {
  string id = 1;
  string title = 2;
  string description = 3;
  int64 start_time = 4;
  int64 end_time = 5;
}

message CreateEventRequest {
  Event event = 1;
}

message CreateEventResponse {}

message UpdateEventRequest {
  string id = 1;
  Event event = 2;
}

message UpdateEventResponse {}

message DeleteEventRequest {
  string id = 1;
}

message DeleteEventResponse {}

message GetEventRequest {
  string id = 1;
}

message GetEventResponse {
  Event event = 1;
}

message ListEventsRequest {}

message ListEventsResponse {
  repeated Event events = 1;
}

service EventService {
  rpc CreateEvent(CreateEventRequest) returns (CreateEventResponse);
  rpc UpdateEvent(UpdateEventRequest) returns (UpdateEventResponse);
  rpc DeleteEvent(DeleteEventRequest) returns (DeleteEventResponse);
  rpc GetEvent(GetEventRequest) returns (GetEventResponse);
  rpc ListEvents(ListEventsRequest) returns (ListEventsResponse);
}